@@ -3,6 +3,7 @@ package com.ecs160.hw2;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
+import com.ecs160.hw2.Parser;
 
 public class MainApp {
     public static void main(String[] args) {
@@ -17,8 +18,13 @@ public class MainApp {
         List<Post> topPost = posts.stream()
                 .sorted(Comparator.comparingInt(Post::getLikeCount).reversed())
                 .limit(10)
-                .collect(Collectors.toList());
+                .toList();
 
-        System.out.println(topPost);
+        int n = 0;
+        for (Post p: topPost) {
+            System.out.println("Post: " + n + " Likes: " + p.getLikeCount());
+            System.out.println(p.getPostContent());
+            n++;
+        }
     }
 }
